--- a/index.html
+++ b/index.html
@@ -103,13 +103,15 @@
                     </div>
                 </div>
 
-                <div class="card clickable" id="play-bot-btn">
-                    <div class="card-icon"><i class="fa-solid fa-robot"></i></div>
-                    <div class="card-text">
-                        <h3>Play Bots</h3>
-                        <p>Challenge a bot from Easy to Master</p>
-                    </div>
-                </div>
+                <a href="setup.html" style="text-decoration: none; color: inherit;">
+    <div class="card clickable" id="play-bot-btn">
+        <div class="card-icon"><i class="fa-solid fa-robot"></i></div>
+        <div class="card-text">
+            <h3>Play Bots</h3>
+            <p>Challenge a bot from Easy to Master</p>
+        </div>
+    </div>
+</a>
 
                 <div class="card disabled">
                     <div class="card-icon"><i class="fa-solid fa-handshake"></i></div>
