--- a/setup.html
+++ b/setup.html
@@ -58,7 +58,7 @@
 
         const titles = {
             low: ["ROOKIE", "NOVICE", "AMATEUR"],
-            mid: ["INTERMEDIATE", "GOOD", "ADVANCED"],
+            mid: ["INTERMEDIATE", "GOOD", "SKILLED", "ADVANCED"],
             high: ["PROVEN", "MASTER", "UNBEATABLE"]
         };
 
