--- a/index.html
+++ b/index.html
@@ -33,3 +33,50 @@
                 <button class="btn-login">Log In</button>
             </div>
         </nav>
+
+        <main class="center-stage">
+            <div class="player-info opponent-info">
+                <i class="fa-solid fa-robot"></i> <span>Bot (Preview)</span>
+            </div>
+
+            <div class="game-preview">
+                <div class="slaps-table-visual">
+                    <div class="center-pile"></div>
+                </div>
+            </div>
+            
+            <div class="player-info">
+                <i class="fa-solid fa-user"></i>
+                <input type="text" id="nickname" value="Guest Player">
+            </div>
+        </main>
+
+        <aside class="action-panel">
+            <div class="panel-header">
+                <i class="fa-solid fa-hand-paper"></i> Play Slaps
+            </div>
+
+            <div class="action-cards">
+                <a href="setup.html" style="text-decoration: none; color: inherit;">
+                    <div class="card clickable" id="play-bot-btn">
+                        <div class="card-icon"><i class="fa-solid fa-robot"></i></div>
+                        <div class="card-text">
+                            <h3>Play Bots</h3>
+                            <p>Challenge a bot from Easy to Master</p>
+                        </div>
+                    </div>
+                </a>
+
+                <div class="card disabled">
+                    <div class="card-icon"><i class="fa-solid fa-bolt"></i></div>
+                    <div class="card-text">
+                        <h3>Play Online</h3>
+                        <p>Play vs a person of similar skill</p>
+                    </div>
+                </div>
+            </div>
+        </aside>
+
+    </div>
+</body>
+</html>
