--- a/setup.html
+++ b/setup.html
@@ -3,88 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Match Setup - Slaps.GG</title>
+    <title>Match Setup</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body class="setup-body">
-
-    <div class="bg-gradient"></div>
-
     <div class="setup-card">
-        <div class="setup-header">
-            <a href="index.html" class="back-btn"><i class="fa-solid fa-chevron-left"></i></a>
-            <h2>MATCH CONFIGURATION</h2>
-        </div>
-
+        <h2>MATCH CONFIGURATION</h2>
         <div class="bot-profile-container">
-            <div class="avatar-ring" id="avatar-ring">
-                <i class="fa-solid fa-robot" id="bot-icon"></i>
-            </div>
+            <i class="fa-solid fa-robot" id="bot-icon" style="font-size: 50px; color: #81b64c;"></i>
             <h1 id="difficulty-title">ROOKIE</h1>
-            <p class="bot-desc" id="difficulty-desc">Slow reaction time. Perfect for learning.</p>
         </div>
-
         <div class="controls-area">
-            <div class="slider-header">
-                <span>DIFFICULTY LEVEL</span>
-                <span id="level-display" class="level-badge">LVL 1</span>
-            </div>
-            
-            <div class="custom-slider-wrapper">
-                <input type="range" min="1" max="10" value="5" class="pro-slider" id="difficulty-slider">
-                <div class="slider-track-fill" id="track-fill"></div>
-            </div>
-
-            <div class="slider-labels">
-                <span>Easy</span>
-                <span>Master</span>
-            </div>
+            <input type="range" min="1" max="10" value="5" class="pro-slider" id="difficulty-slider">
         </div>
-
-        <a href="game.html" class="btn-launch" id="start-btn">
-            INITIALIZE MATCH <i class="fa-solid fa-play"></i>
-        </a>
+        <a href="game.html" class="btn-launch">START MATCH</a>
     </div>
-
     <script>
         const slider = document.getElementById('difficulty-slider');
-        const levelDisplay = document.getElementById('level-display');
         const title = document.getElementById('difficulty-title');
-        const desc = document.getElementById('difficulty-desc');
-        const botIcon = document.getElementById('bot-icon');
-        const avatarRing = document.getElementById('avatar-ring');
-        const trackFill = document.getElementById('track-fill');
-
-        const difficultyData = [
-            { name: "ROOKIE",       color: "#81b64c", desc: "Very slow. Good for learning mechanics." }, 
-            { name: "NOVICE",       color: "#81b64c", desc: "Still learning. Reacts slowly." },          
-            { name: "AMATEUR",      color: "#81b64c", desc: "Knows the rules, but hesitates." },         
-            { name: "INTERMEDIATE", color: "#e6912c", desc: "A standard opponent. Pays attention." },    
-            { name: "SKILLED",      color: "#e6912c", desc: "Reacts quickly to obvious moves." },        
-            { name: "GOOD",         color: "#e6912c", desc: "Makes very few mistakes." },                
-            { name: "ADVANCED",     color: "#e6912c", desc: "Competitive reaction times." },             
-            { name: "PROVEN",       color: "#cc3333", desc: "Fast. Very fast." },                        
-            { name: "MASTER",       color: "#cc3333", desc: "Near instant reactions." },                 
-            { name: "UNBEATABLE",   color: "#cc3333", desc: "Good luck. You will need it." }             
-        ];
-
-        function updateUI(val) {
-            const data = difficultyData[val - 1];
-            title.innerText = data.name;
-            desc.innerText = data.desc;
-            levelDisplay.innerText = "LVL " + val;
-            let percentage = ((val - 1) / 9) * 100;
-            trackFill.style.width = percentage + "%";
-            botIcon.style.color = data.color;
-            avatarRing.style.borderColor = data.color;
-            avatarRing.style.boxShadow = `0 0 15px ${data.color}40`; 
-            levelDisplay.style.backgroundColor = data.color;
-            trackFill.style.backgroundColor = data.color;
-            localStorage.setItem('slapsDifficulty', val);
-        }
-        slider.oninput = function() { updateUI(this.value); };
-        updateUI(5);
+        const names = ["ROOKIE", "NOVICE", "AMATEUR", "INTERMEDIATE", "SKILLED", "GOOD", "ADVANCED", "PROVEN", "MASTER", "UNBEATABLE"];
+        slider.oninput = function() {
+            title.innerText = names[this.value - 1];
+            localStorage.setItem('slapsDifficulty', this.value);
+        };
+        localStorage.setItem('slapsDifficulty', 5);
     </script>
 </body>
 </html>
