--- a/index.html
+++ b/index.html
@@ -8,14 +8,30 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
+
     <div class="main-layout">
+        
         <nav class="sidebar">
             <div class="logo">SLAPS.GG</div>
+            
+            <div class="search-bar">
+                <i class="fa-solid fa-magnifying-glass"></i>
+                <input type="text" placeholder="Search">
+            </div>
+
             <ul class="nav-links">
                 <li><i class="fa-solid fa-play"></i> Play</li>
                 <li><i class="fa-solid fa-puzzle-piece"></i> Puzzles</li>
                 <li><i class="fa-solid fa-graduation-cap"></i> Learn</li>
+                <li><i class="fa-solid fa-tv"></i> Watch</li>
+                <li><i class="fa-solid fa-newspaper"></i> News</li>
+                <li><i class="fa-solid fa-users"></i> Social</li>
             </ul>
+
+            <div class="auth-buttons">
+                <button class="btn-signup">Sign Up</button>
+                <button class="btn-login">Log In</button>
+            </div>
         </nav>
 
         <main class="center-stage">
@@ -30,6 +46,7 @@
             <div class="panel-header">
                 <i class="fa-solid fa-hand-paper"></i> Play Slaps
             </div>
+
             <div class="action-cards">
                 <a href="setup.html" style="text-decoration: none; color: inherit;">
                     <div class="card clickable" id="play-bot-btn">
@@ -40,8 +57,17 @@
                         </div>
                     </div>
                 </a>
+
+                <div class="card disabled">
+                    <div class="card-icon"><i class="fa-solid fa-bolt"></i></div>
+                    <div class="card-text">
+                        <h3>Play Online</h3>
+                        <p>Play vs a person of similar skill</p>
+                    </div>
+                </div>
             </div>
         </aside>
+
     </div>
 </body>
 </html>
