--- a/game.html
+++ b/game.html
@@ -18,9 +18,6 @@
             <h2 id="bot-count">26</h2>
         </div>
         <div class="divider"></div>
-        <div class="stat-small">
-            <span id="game-timer">00:00</span>
-        </div>
         <a href="index.html" class="btn-quit-small">QUIT</a>
     </div>
 
@@ -36,12 +33,10 @@
     <div class="table-surface">
         
         <div class="zone top-zone">
-            <div class="foundation-box" id="bot-boundary">
-                </div>
+            <div class="foundation-box" id="bot-boundary"></div>
         </div>
 
         <div class="zone middle-zone">
-            
             <div class="pile-group">
                 <div class="card-slot deck-slot" id="bot-draw-deck">
                     <div class="card-back"></div>
@@ -63,12 +58,10 @@
                 </div>
                 <div class="label-text">Your Deck</div>
             </div>
-
         </div>
 
         <div class="zone bottom-zone">
-            <div class="foundation-box" id="player-boundary">
-                </div>
+            <div class="foundation-box" id="player-boundary"></div>
         </div>
 
     </div>
