--- a/game.html
+++ b/game.html
@@ -5,17 +5,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slaps.GG - Arena</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body class="game-body">
 
     <div class="stats-widget">
         <div class="stat-box">
-            <span>YOU</span>
-            <h2 id="player-count">26</h2>
-        </div>
-        <div class="stat-box">
             <span>BOT</span>
             <h2 id="bot-count">26</h2>
+        </div>
+        <div class="stat-box">
+            <span>YOU</span>
+            <h2 id="player-count">26</h2>
         </div>
         <div class="divider"></div>
         <a href="index.html" class="btn-quit-small">QUIT</a>
