--- a/game.html
+++ b/game.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Slaps.GG - Arena</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body class="game-body">
 
@@ -37,16 +38,26 @@
         </div>
 
         <div class="zone middle-zone">
+            
             <div class="pile-group">
-                <div class="card-slot deck-slot" id="bot-draw-deck"><div class="card-back"></div></div>
+                <div class="card-slot deck-slot" id="bot-draw-deck">
+                    <div class="card-back"></div>
+                    <span class="deck-text" id="bot-deck-text"></span>
+                </div>
                 <div class="label-text rotated">Bot Deck</div>
             </div>
+
             <div class="pile-group"><div class="card-slot center-slot" id="center-left"></div></div>
             <div class="pile-group"><div class="card-slot center-slot" id="center-right"></div></div>
+
             <div class="pile-group">
-                <div class="card-slot deck-slot" id="player-draw-deck"><div class="card-back"></div></div>
+                <div class="card-slot deck-slot clickable-deck" id="player-draw-deck">
+                    <div class="card-back"></div>
+                    <span class="deck-text" id="player-deck-text"></span>
+                </div>
                 <div class="label-text">Your Deck</div>
             </div>
+
         </div>
 
         <div class="zone bottom-zone">
