--- a/game.html
+++ b/game.html
@@ -42,7 +42,7 @@
             <div class="pile-group">
                 <div class="card-slot deck-slot" id="bot-draw-deck">
                     <div class="card-back"></div>
-                    <span class="deck-text" id="bot-deck-text"></span>
+                    <span class="deck-text" id="bot-deck-text">WAIT</span>
                 </div>
                 <div class="label-text rotated">Bot Deck</div>
             </div>
@@ -53,7 +53,7 @@
             <div class="pile-group">
                 <div class="card-slot deck-slot clickable-deck" id="player-draw-deck">
                     <div class="card-back"></div>
-                    <span class="deck-text" id="player-deck-text"></span>
+                    <span class="deck-text" id="player-deck-text">Start</span>
                 </div>
                 <div class="label-text">Your Deck</div>
             </div>
