--- a/game.html
+++ b/game.html
@@ -11,7 +11,7 @@
 
     <div class="stats-widget">
         <div class="stat-box">
-            <span>BOT</span>
+            <span>AI</span>
             <h2 id="bot-count">26</h2>
         </div>
         <div class="stat-box">
@@ -42,9 +42,9 @@
             <div class="pile-group">
                 <div class="card-slot deck-slot" id="bot-draw-deck">
                     <div class="card-back"></div>
-                    <span class="deck-text" id="bot-deck-text">WAIT</span>
+                    <span class="deck-text" id="bot-deck-text"></span>
                 </div>
-                <div class="label-text rotated">Bot Deck</div>
+                <div class="label-text">AI Deck</div> 
                 <div class="borrow-label" id="bot-borrow-label">BORROWED</div>
             </div>
 
