--- a/game.html
+++ b/game.html
@@ -22,6 +22,8 @@
         <a href="index.html" class="btn-quit-small">QUIT</a>
     </div>
 
+    <div id="slap-message" class="slap-msg hidden">PLAYER SLAPS WON!</div>
+
     <div id="game-overlay" class="overlay hidden">
         <div class="overlay-content">
             <h1 id="overlay-title">VICTORY!</h1>
