--- a/index.html
+++ b/index.html
@@ -3,22 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Slaps.GG - Play Online</title>
+    <title>Slaps.GG</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 </head>
 <body>
-
     <div class="main-layout">
-        
         <nav class="sidebar">
             <div class="logo">SLAPS.GG</div>
-            
             <div class="search-bar">
                 <i class="fa-solid fa-magnifying-glass"></i>
                 <input type="text" placeholder="Search">
             </div>
-
             <ul class="nav-links">
                 <li><i class="fa-solid fa-play"></i> Play</li>
                 <li><i class="fa-solid fa-puzzle-piece"></i> Puzzles</li>
@@ -27,7 +23,6 @@
                 <li><i class="fa-solid fa-newspaper"></i> News</li>
                 <li><i class="fa-solid fa-users"></i> Social</li>
             </ul>
-
             <div class="auth-buttons">
                 <button class="btn-signup">Sign Up</button>
                 <button class="btn-login">Log In</button>
@@ -43,10 +38,7 @@
         </main>
 
         <aside class="action-panel">
-            <div class="panel-header">
-                <i class="fa-solid fa-hand-paper"></i> Play Slaps
-            </div>
-
+            <div class="panel-header"><i class="fa-solid fa-hand-paper"></i> Play Slaps</div>
             <div class="action-cards">
                 <a href="setup.html" style="text-decoration: none; color: inherit;">
                     <div class="card clickable" id="play-bot-btn">
@@ -57,7 +49,6 @@
                         </div>
                     </div>
                 </a>
-
                 <div class="card disabled">
                     <div class="card-icon"><i class="fa-solid fa-bolt"></i></div>
                     <div class="card-text">
@@ -67,7 +58,6 @@
                 </div>
             </div>
         </aside>
-
     </div>
 </body>
 </html>
